pj4/err.txt
./SquareMatrix.cpp: In constructor 'SquareMatrix::SquareMatrix(const istream&, int)':
./SquareMatrix.cpp:45:24: error: no matching function for call to 'getline(const istream&, std::string&)'
  std::getline(ist, buff);
                        ^
In file included from /usr/lib/gcc/x86_64-pc-cygwin/6.4.0/include/c++/string:53:0,
                 from ./SquareMatrix.h:4,
                 from ./SquareMatrix.cpp:1:
/usr/lib/gcc/x86_64-pc-cygwin/6.4.0/include/c++/bits/basic_string.tcc:1509:5: note: candidate: template<class _CharT, class _Traits, class _Alloc> std::basic_istream<_CharT, _Traits>& std::getline(std::basic_istream<_CharT, _Traits>&, std::basic_string<_CharT, _Traits, _Alloc>&, _CharT)
     getline(basic_istream<_CharT, _Traits>& __in,
     ^~~~~~~
/usr/lib/gcc/x86_64-pc-cygwin/6.4.0/include/c++/bits/basic_string.tcc:1509:5: note:   template argument deduction/substitution failed:
./SquareMatrix.cpp:45:24: note:   types 'std::basic_istream<_CharT, _Traits>' and 'const istream {aka const std::basic_istream<char>}' have incompatible cv-qualifiers
  std::getline(ist, buff);
                        ^
In file included from /usr/lib/gcc/x86_64-pc-cygwin/6.4.0/include/c++/string:52:0,
                 from ./SquareMatrix.h:4,
                 from ./SquareMatrix.cpp:1:
/usr/lib/gcc/x86_64-pc-cygwin/6.4.0/include/c++/bits/basic_string.h:5380:5: note: candidate: template<class _CharT, class _Traits, class _Alloc> std::basic_istream<_CharT, _Traits>& std::getline(std::basic_istream<_CharT, _Traits>&, std::basic_string<_CharT, _Traits, _Alloc>&)
     getline(basic_istream<_CharT, _Traits>& __is,
     ^~~~~~~
/usr/lib/gcc/x86_64-pc-cygwin/6.4.0/include/c++/bits/basic_string.h:5380:5: note:   template argument deduction/substitution failed:
./SquareMatrix.cpp:45:24: note:   types 'std::basic_istream<_CharT, _Traits>' and 'const istream {aka const std::basic_istream<char>}' have incompatible cv-qualifiers
  std::getline(ist, buff);
                        ^
In file included from /usr/lib/gcc/x86_64-pc-cygwin/6.4.0/include/c++/string:52:0,
                 from ./SquareMatrix.h:4,
                 from ./SquareMatrix.cpp:1:
/usr/lib/gcc/x86_64-pc-cygwin/6.4.0/include/c++/bits/basic_string.h:5388:5: note: candidate: template<class _CharT, class _Traits, class _Alloc> std::basic_istream<_CharT, _Traits>& std::getline(std::basic_istream<_CharT, _Traits>&&, std::basic_string<_CharT, _Traits, _Alloc>&, _CharT)
     getline(basic_istream<_CharT, _Traits>&& __is,
     ^~~~~~~
/usr/lib/gcc/x86_64-pc-cygwin/6.4.0/include/c++/bits/basic_string.h:5388:5: note:   template argument deduction/substitution failed:
./SquareMatrix.cpp:45:24: note:   types 'std::basic_istream<_CharT, _Traits>' and 'const istream {aka const std::basic_istream<char>}' have incompatible cv-qualifiers
  std::getline(ist, buff);
                        ^
In file included from /usr/lib/gcc/x86_64-pc-cygwin/6.4.0/include/c++/string:52:0,
                 from ./SquareMatrix.h:4,
                 from ./SquareMatrix.cpp:1:
/usr/lib/gcc/x86_64-pc-cygwin/6.4.0/include/c++/bits/basic_string.h:5395:5: note: candidate: template<class _CharT, class _Traits, class _Alloc> std::basic_istream<_CharT, _Traits>& std::getline(std::basic_istream<_CharT, _Traits>&&, std::basic_string<_CharT, _Traits, _Alloc>&)
     getline(basic_istream<_CharT, _Traits>&& __is,
     ^~~~~~~
/usr/lib/gcc/x86_64-pc-cygwin/6.4.0/include/c++/bits/basic_string.h:5395:5: note:   template argument deduction/substitution failed:
./SquareMatrix.cpp:45:24: note:   types 'std::basic_istream<_CharT, _Traits>' and 'const istream {aka const std::basic_istream<char>}' have incompatible cv-qualifiers
  std::getline(ist, buff);
                        ^
